--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/style.css">
     <title>My Pet List</title>
 </head>
@@ -10,11 +11,11 @@
     <header id="header">
         <nav>
             <ul>
-                <a href="/"><button>Home</button></a>
-                <a href="/owners"><button>Owner Records</button></a>
-                <a href="/animals"><button>Patient Records</button></a>
-                <a href="/employees"><button>Employee Records</button></a>
-                <a href="/allergies"><button>Allergy DataBase</button></a>
+                <a href="/"><button id="button">Home</button></a>
+                <a href="/owners"><button id="button">Owners</button></a>
+                <a href="/animals"><button id="button">Patients</button></a>
+                <a href="/allergies"><button id="button">Allergies</button></a>
+                <a href="/employees"><button id="button">Employees</button></a>
             </ul>
         </nav>
     </header>
