--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<Section id="main">
+<Section>
     <h2 id="header">
         Welcome to the Vet Surgery Management System
-    </h2><br>
-
+    </h2>
     <h4>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum iaculis nunc, vel egestas sapien ullamcorper nec. Aliquam erat volutpat. Etiam sit amet metus nunc. Donec faucibus libero id lacus consequat, ac vehicula justo maximus. Nam tortor est, sollicitudin ac nulla ut, ornare rutrum quam. Fusce pharetra sed elit eu cursus. Pellentesque nulla dolor, ullamcorper a imperdiet nec, pretium et tellus. Vestibulum fermentum vehicula ornare.
-
     In consectetur nec nisi nec iaculis. Morbi condimentum ac neque malesuada tincidunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dolor neque, euismod vitae laoreet at, placerat at metus. Aliquam ac mauris dictum, condimentum magna eu, hendrerit enim. Nam non fringilla augue, vel ullamcorper felis. Donec semper auctor quam id cursus. In ultrices dignissim odio, vel fringilla tellus lobortis vel. Praesent enim massa, feugiat ac lobortis id, hendrerit ac nisl. Aenean egestas nisi massa, eu gravida arcu lacinia eget. Mauris neque nisl, fringilla id risus at, auctor euismod est. Praesent varius iaculis varius. In rutrum vitae arcu id tempor. Fusce ut convallis tellus. Mauris in mi dictum, dictum nunc vitae, accumsan nulla.
-
     Mauris a velit vulputate nibh dapibus tempus. Nullam ligula lorem, bibendum a ornare vel, volutpat vel ipsum. Donec vitae fringilla odio. Nullam eget purus tortor. Suspendisse posuere tincidunt nulla sagittis sagittis. Nulla ultricies mauris in vulputate pharetra. Nullam nec pretium metus, non congue odio.
     </h4>
 </Section>
