--- a/templates/animals/index.html
+++ b/templates/animals/index.html
@@ -1,26 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-<ul>
-    <a href="/owners/new"><button>Register New Owner</button></a>
-    <a href="/animals/new"><button>Registered Owners: Register New Patient</button></a>
-
+<ul id="top">
+    <a href="/owners/new"><button id="button">Register Owner</button></a>
+    <a href="/animals/new"><button id="button">Register Patient</button></a>
 </ul>
-<h2>Patient Records:</h2>
+<h2 class="title">Patient Records</h2>
 {% for animal in all_animals %}
     <h4>{{animal.name}}</h4>
-        <div>
+        <div id="row">
             <form  action="/animals/{{animal.id}}" method="get">
-                <button class="trash-button">View</button>
+                <button id="gbutton">View</button>
             </form>
             <form  action="/animals/{{animal.id}}/edit" method="post">
-                <button class="trash-button">Edit</button>
+                <button id="gbutton">Edit</button>
             </form>
             <form  action="/animals/{{animal.id}}/delete" method="post">
-                <button class="trash-button">Delete</button>
+                <button id="gbutton">Delete</button>
             </form>
-            <a href="/medicals"><button>Update Medical Notes</button></a>
-            <a href="/allergys"><button>Update Allergy Info</button></a>
+            <a href="/medicals"><button id="gbutton">Update Medical Notes</button></a>
+            <a href="/allergys"><button id="gbutton">Update Allergy Info</button></a>
         </div>
 <hr width="475;"
     align="left">
