--- a/templates/owners/new.html
+++ b/templates/owners/new.html
@@ -1,20 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 <section id="new">
-  <form action="/owners" method="post">
+  <form action="/owners" method="post" id="space">
     <div>
-      <label for="name">Name: </label>
-      <input type="text" id="name" name="name" required autofocus>
+      <input type="text" id="name" name="name" placeholder="Name" required autofocus>
     </div>
     <div>
-      <label for="contact">Tel. Number: </label>
-      <input type="text" id="contact" name="contact" required>
+      <input type="text" id="contact" name="contact" placeholder="Telephone Number" required>
     </div>
     <div>
-      <label for="address">Address: </label>
-      <input type="text" id="address" name="address" required>
+      <input type="text" id="address" name="address" placeholder="Address" required>
     </div>
-    <button type="submit">Register New Owner</button>
+    <button type="submit" id="gbutton"S>Register New Owner</button>
   </form>
 </section>
   {% endblock %}
