--- a/templates/owners/new.html
+++ b/templates/owners/new.html
@@ -11,7 +11,7 @@
     <div>
       <input type="text" id="address" name="address" placeholder="Address" required>
     </div>
-    <button type="submit" id="gbutton"S>Register New Owner</button>
+    <button type="submit" id="gbutton">Register New Owner</button>
   </form>
 </section>
   {% endblock %}
