--- a/templates/allergys/index.html
+++ b/templates/allergys/index.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 <div>
-    <form action="/allergys" method="post">
-        <label for="animal">Animal: </label>
+    <form action="/allergys" method="post" id="space">  
         <select id="animal" name="animal">
         {% for pet in all_animals %}
             <option value="{{ pet.id }}"
@@ -12,8 +11,7 @@
             </option>
         {% endfor %}
         </select>
-        <label for="allergy">Allergy: </label>
-        <select id="allergy" name="allergy">
+        <select id="allergy" name="allergy" placeholder="Allergy">
         {% for allergy in all_allergies %}
             <option value="{{ allergy.id }}"
             {% if allergy.id== allergy.id %} selected="selected"{% endif %}>
@@ -21,7 +19,7 @@
             </option>
         {% endfor %}
         </select>
-        <button type="submit">Update Allergy Notes</button>
+        <button type="submit">Update</button>
     </form>
     
   </div>
