--- a/templates/owners/results.html
+++ b/templates/owners/results.html
@@ -6,7 +6,7 @@
     <h3 id="details" class="inline">Contact </h3><h4 class="inline">{{ owner.contact}}</h4> <br>
     <h3 id="details" class="inline">Address </h3><h4 class="inline">{{ owner.address}}</h4> <br>
     <h3 id="details" class="inline">Balance </h3><h4 class="inline">{{ owner.balance}}</h4> <br>
-    <h3 id="details" class="inline">  Pets  </h3>{% for pet in all_animals %}<h4 class="inline">{{ pet.name }} : </h4><br>
+    <h3 id="details" class="inline">  Pets  </h3>{% for pet in all_animals %}<h4 class="inline">{{ pet.name }} : </h4>
     {% endfor %}
 </section>
 {% endblock %}
